      for future additions or changes.

    o view_logo(): plot logos with matrix input instead of universalmotif-class
      object input.

    o trim_motifs(..., trim.from): trim from both directions or just one.

    o shuffle_sequences(..., window, window.size, window.overlap): shuffle
      sequences iteratively in windows of specified size.

MINOR CHANGES

    o Support for MotIV-pwm2 formatted motifs has been dropped, as the package
      is no longer a part of the current Bioconductor version.

    o read_matrix()/write_matrix(): the sep argument can now be NULL (no
      seperators.)

CHANGES IN VERSION 1.8.3
------------------------

BUG FIXES

    o Fixed improper handling of MEME version string in read_meme().

CHANGES IN VERSION 1.8.2
------------------------

BUG FIXES

    o Increase compliance with MEME motif format: motif files with missing
      alphabets/strand/bkg are now allowed and  will be assumed to be
      DNA/+/uniform frequencies. A check for the MEME version is performed,
      though only a warning is given if not found.

    o Fixed typo in run_meme() missing dependency error message.

CHANGES IN VERSION 1.8.1
------------------------

BUG FIXES

    o Fixed error when scan_sequences() is used with both RC = TRUE and
      calc.pvals = TRUE.

    o Fixed motif.i column in scan_sequences() results not reporting correctly
      when RC = TRUE.

    o Fixed memory access bug in motif_pvalue() when k was set to a value
      resulting in three or more submotifs.

CHANGES IN VERSION 1.8.0
------------------------

NEW FEATURES

    o scan_sequences()/enrich_motifs() can now be used to scan/enrich for
      gapped motifs. A new section has been added to the SequenceSearches.Rmd
      vignette.

    o scan_sequences(..., use.gaps), enrich_motifs(..., use.gaps): ignore motif
      gap information.

    o read_meme(), write_meme(): now fully support custom alphabets.

    o prob_match(), prob_match_bkg(): calculate the probability of a motif