@@ -17,7 +17,8 @@ different character lengths.}
 for plotting, as generated by the \code{createPolygons()} function from the
 \code{gglogo} package. See the \code{fontDFroboto} data object (which is used
 by default when \code{fontDF = NULL}). See \code{Examples} for how to generate
-your own font set. Expected columns: \code{x}, \code{y}, \code{order}, \code{group}.}
+your own font set. Expected columns: \code{x}, \code{y}, \code{order}, \code{group};
+additional columns will be ignored.}
 
 \item{fill}{\code{character} A single colour to fill all letters with. Ignored
 if \code{colour.scheme} is provided.}
@@ -52,17 +53,22 @@ parameter is ignore if \code{use.type \%in\% c("PWM", "ICM")}.}
 }
 \value{
 A \code{ggplot} object. If you wish to plot the data yourself from
-polygon paths, access them using \verb{$data} on the output object.
+polygon paths, access them using \verb{$data} on the output object. The
+theme \code{theme_void()} is applied to the object; apply your own theme
+or adjust specific plot parameters with \code{theme()} to change this.
 }
 \description{
 This function provides the plotting capabilities of \code{\link[=view_motifs]{view_motifs()}} without
 requiring \code{universalmotif}-class objects. Instead, it takes a numeric matrix
-with row names as input.
+with row names as input. Additionally, columns can be of any height and
+letters can be a mix of different character lengths.
 }
 \examples{
-## Feel free to mix and match row name character lengths.
+## Feel free to mix and match row name character lengths and column sums.
 data(examplemotif)
 toplot <- examplemotif["motif"]
+toplot[4] <- 2
+toplot[20] <- -0.5
 rownames(toplot)[1] <- "AA"
 view_logo(toplot)
 
