@@ -85,7 +85,8 @@ Default colours are provided for DNA, RNA, and AA motifs if left \code{NULL}.}
 for plotting, as generated by the \code{createPolygons()} function from the
 \code{gglogo} package. See the \code{fontDFroboto} data object (which is used
 by default when \code{fontDF = NULL}). See \code{Examples} for how to generate
-your own font set. Expected columns: \code{x}, \code{y}, \code{order}, \code{group}.}
+your own font set. Expected columns: \code{x}, \code{y}, \code{order}, \code{group};
+additional columns will be ignored.}
 
 \item{min.height}{\code{numeric(1)} Minimum height for a letter to be plotted.
 The number is taken as the fraction of the total height of the plot.
@@ -124,8 +125,8 @@ are aligned with the first in the list.
 \details{
 See \code{\link[=compare_motifs]{compare_motifs()}} for more info on comparison parameters.
 
-See \code{\link[=view_logo]{view_logo()}} to plot from a numeric matrix instead of a \code{universalmotif}
-object.
+See \code{\link[=view_logo]{view_logo()}} to plot from a numeric matrix with arbitrary values instead
+of a motif object.
 
 Note: \code{score.strat = "a.mean"} is NOT recommended, as \code{\link[=view_motifs]{view_motifs()}} will
 not discriminate between two alignments with equal mean scores, even if one
@@ -144,7 +145,7 @@ view_motifs(examplemotif2, use.freq = 2)
 ## Generate your own letter set:
 \dontrun{
 
-library(gglogo)
+library(gglogo)  # install from CRAN first if needed
 fontDFtimes <- createPolygons(LETTERS, "Times", 800, scale = TRUE)
 view_motifs(examplemotif2, fontDF = fontDFtimes)
 
@@ -154,10 +155,11 @@ view_motifs(examplemotif2, fontDF = fontDFtimes)
 ## letters which have been badly horizontally scaled, you can fix them
 ## manually as demonstrated here:
 
+# Retrieve the x-coordinates for the desired letter:
 tofix <- fontDFtimes$x[fontDFtimes$group == "I"]
-# First scale the letter x-coordinates:
+# Scale the letter x-coordinates:
 tofix <- tofix * 0.35
-# Center the letter around 0.5:
+# Remember to center the letter around 0.5 again:
 tofix <- tofix + (1 - max(tofix)) / 2
 # Apply the fix:
 fontDFtimes$x[fontDFtimes$group == "I"] <- tofix
